# www

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  Justfile  README.md  dx  fix_paths.py
.circleci/: config.yml
.cursor/rules/: dx-www.mdc
.dx/forge/: package-status.json  source-manifest.json
.dx/template-app-browser-preview/: server.cjs
.github/: copilot-instructions.md
.github/workflows-disabled/: bench.yml.disabled  ci.yml.disabled  forge-ci.yml.disabled  release.yml.disabled
auth/src/: lib.rs
auth/tests/: property_tests.rs
benchmarks/: app-api-route-handler-extensions.test.ts  app-api-route-handler-root-precedence.test.ts  app-router-build-output-shared-segments.test.ts  app-router-discovery-specificity-summary.test.ts  app-router-execution-shared-segments.test.ts  app-router-invalid-non-path-segments.test.ts  app-router-page-collision-metadata.test.ts  app-router-page-request-normalization.test.ts  app-router-segment-file-discovery.test.ts  app-router-server-data-build-contract.test.ts  app-router-shape-collision-peers.test.ts  app-router-shared-segment-classifier.test.ts  app-router-terminal-catch-all.test.ts  authentication-dx-check-output.test.ts  authentication-lane-naming.test.ts  authentication-package-status-read-model.test.ts  automations-bridge.test.ts  automations-dashboard-workflow.test.ts  automations-dx-style-compatibility.test.ts  automations-generated-starter-receipt.test.ts  automations-receipt-hash-refresh.test.ts  better-auth-dashboard-workflow.test.ts  charts-g2-heatmap-size.test.cjs  charts-runtime-interaction.test.cjs  charts-waterfall-compiler.test.cjs  cli-dev-http-split-safety.test.ts  cli-forge-add-options-split-safety.test.ts  cli-forge-beta-options-split-safety.test.ts  cli-forge-ci-snippets-options-split-safety.test.ts  cli-forge-evidence-options-split-safety.test.ts  cli-forge-import-help-contract.test.ts  cli-forge-launch-page-split-safety.test.ts  cli-forge-materialize-static-assets-split-safety.test.ts  cli-forge-packages-command-split-safety.test.ts  cli-forge-public-evidence-options-split-safety.test.ts  cli-forge-public-status-split-safety.test.ts  cli-forge-publish-plan-options-split-safety.test.ts  cli-forge-release-candidate-command-split-safety.test.ts  cli-forge-release-dashboard-command-split-safety.test.ts  cli-forge-release-history-command-split-safety.test.ts  (+248 more)
benchmarks/benches/: parser_benchmarks.rs
benchmarks/reports/: binary-web-lab.json  dx-www-ecosystem-benchmark-2026-05-18.md  forge-installability-snapshot.md  forge-installability-snapshot.provenance.json  forge-large-content-comparison.json  forge-launch-delivery-comparison.json  forge-launch-delivery-comparison.md  forge-medium-route-comparison.json  forge-package-vertical-comparison.json  forge-public-release-history.md  forge-release-readiness-trend.md  forge-source-owned-package-review.md  forge-static-competitor-evidence.json  framework-scorecard.md  vertical-proof-measurement.json
binary/src/: htip_bridge.rs
browser-micro/: Cargo.toml
browser/js/: dx-browser-host.js  dx-loader.js
browser/src/: ecosystem.rs  lib.rs  style_loader.rs
cli/: README.md
cli/src/: dev.rs  utils.rs
core/: Cargo.toml  README.md
core/src/: admin.rs  cmd.rs  codegen_macro.rs  config.rs  cron.rs  dev_server.rs  forms.rs  guards.rs  handlers.rs  hmr.rs  jobs.rs  keepalive.rs  lib.rs  optimistic.rs  progressive.rs  pwa.rs  reactivity.rs  schema_parser.rs  splitter.rs  www_config.rs
core/tests/: parser_property_tests.rs
crates/benchmarks/: ai-route-handler-provider-boundary.test.ts  app-router-build-route-discovery-output.test.ts  app-router-discovery-summary.test.ts  app-router-duplicate-param-names.test.ts  app-router-dynamic-collision-shape.test.ts  app-router-filesystem-specificity.test.ts  app-router-invalid-param-segments.test.ts  app-router-invalid-segment-diagnostics.test.ts  app-router-page-discovery-collisions.test.ts  app-router-page-extensions-build-loop.test.ts  app-router-route-precedence-vector.test.ts  app-router-route-root-precedence.test.ts  app-router-source-owned-vocabulary.test.ts  app-router-src-app-segment-depth.test.ts  app-router-static-segment-decoding.test.ts  authentication-dx-check-package-lane-panel.test.ts  authentication-dx-check-visibility.test.ts  (+457 more)
crates/browser/: CHANGELOG.md  Cargo.toml  README.md
demo/: dx_www_client_tiny_opt.wasm  htip_generator.rs  index_enhanced.html  test_decompression.rs
docs/: DX_WWW_CURRENT_DETAILS_2026-05-29.md  DX_WWW_CURRENT_DETAILS_2026-05-30.md  DX_WWW_CURRENT_FEATURE_DOSSIER_2026-05-28.md  DX_WWW_FRAMEWORK_STRUCTURE.md  DX_WWW_MANAGER_HANDOFF.md  NEXTJS_COMPATIBILITY_MAP.md  SECURITY.md  architecture.md  benchmarks.md  build-graph-model.md  dx-www-developer-contract.md  dx-www-route-state-standard.md  forge-adoption-launch-checklist.md  forge-ci-smoke.md  forge-import-security-model.md  forge-launch-limitations.md  forge-public-beta-quickstart.md  forge-public-launch-checklist.md  forge-public-launch-handoff.md  forge-real-project-adoption.md  forge-shadcn-migration.md  forge-universal-importers.md  getting-started.md  next-rust-merge-checkpoint.md  repo-hygiene.md  root-workspace-readme.md  root-workspace-status.md  root-workspace-todo.md  wire-format-audit.md
dx-mobile-app/: vercel.json
dx-mobile-app/src-tauri/: Cargo.toml  Info.ios.plist
dx-mobile-app/src-tauri/src/: contract.rs  lib.rs  pairing.rs
dx-option/: Cargo.toml
dx-www/: README.md
related-crates/media-icon/: Cargo.toml  INTEGRATION_PLAN.md  PERFORMANCE.md  README.md
related-crates/media-icon/src/: avx_search.rs  bloom.rs  builder.rs  engine.rs  gpu.rs  index.rs  lib.rs  machine_catalog.rs  machine_manifest.rs  machine_pack_body.rs  machine_precomputed.rs  machine_readiness.rs  multipattern.rs  parser.rs  perfect_hash.rs  precomputed.rs  search.rs  zero_alloc.rs
styles/: theme.css
sync/src/: lib.rs
tools/: agent-browser.cmd  agent-browser.mjs  agent-browser.ps1
trash/: CSS.md  CURRENT_STATE.md  DX.md  PLAN.md  TODO.md  VERSIONING.md  WORLD.md  start-www-worker.ps1  style.css
(+2796 files in other folders)
