[workspace]
resolver = "2"
members = [
    "crates/*",
    "related-crates/markdown",
    "related-crates/media-icon",
    "related-crates/security",
    "related-crates/style",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["DX Team <team@dx-www.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dx-www/dx-www"
homepage = "https://dx-www.dev"
documentation = "https://docs.dx-www.dev"
rust-version = "1.85"

[workspace.dependencies]
dx-www-binary = { path = "crates/binary" }
dx-www-compiler = { path = "crates/core" }
dx-www-core = { path = "crates/framework-core" }
dx-www-dom = { path = "crates/dom" }
dx-www-error = { path = "crates/error" }
dx-www-morph = { path = "crates/morph" }
dx-www-packet = { path = "crates/packet" }
dx-www-server = { path = "crates/server" }
dx-security = { path = "related-crates/security" }
dx-serializer = { path = "../serializer" }
markdown = { path = "related-crates/markdown" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.8", features = ["bytecheck"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
blake3 = "1.8"
argon2 = "0.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "DocumentFragment", "Element", "HtmlElement", "HtmlTemplateElement", "Node", "Text", "console"] }
bytemuck = { version = "1.14", features = ["derive"] }
once_cell = "1.19"
console_error_panic_hook = "0.1"
memmap2 = "0.9"

# OXC Parser
oxc_allocator = "0.56"
oxc_parser = "0.56"
oxc_ast = "0.56"
oxc_span = "0.56"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"
