[package]
name = "dx-mobile-app-native"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
publish = false

[workspace]

[lib]
name = "dx_mobile_app_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { path = "../../../native/crates/tauri-build", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { path = "../../../native/crates/tauri", features = [] }
time = { version = "0.3", features = ["parsing"] }
url = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "=2.4.5"

[patch.crates-io]
tauri = { path = "../../../native/crates/tauri" }
