[package]
name = "dx-icons"
version = "0.1.0"
edition = "2024"
authors = ["DX Team"]
description = "Receipt-backed media-icon cache and search components"
license = "MIT"
autobins = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["gpu", "rayon"]
gpu = ["wgpu", "pollster", "futures-intrusive", "simsimd"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "js-sys", "web-sys"]

[[bin]]
name = "search_cli"
path = "src/bin/search_cli.rs"

[[bin]]
name = "build_index"
path = "src/bin/build_index.rs"

[[bin]]
name = "icon"
path = "src/bin/icon.rs"

[[bin]]
name = "generate_svgl"
path = "src/bin/generate_svgl.rs"

[dependencies]
# Zero-copy serialization
rkyv = { version = "0.8", features = ["bytecheck"] }
dx-serializer = { path = "../../../serializer", default-features = false, features = ["converters", "mmap"] }
bytemuck = { version = "1.19", features = ["derive"] }

# Compact data structures
fst = "0.4"

# JSON parsing
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Compression
lz4_flex = "0.11"
memmap2 = "0.9"

# Error handling
anyhow = "1.0"
blake3 = { workspace = true }

# Parallel processing
rayon = { version = "1.10", optional = true }

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }

# Error handling

# Fuzzy matching
triple_accel = "0.4"
nucleo-matcher = "0.3"

# Cache/search implementation helpers
ahash = "0.8"           # HashMap implementation for cache/search paths
memchr = "2.7"          # Byte/string search helpers
smallvec = "1.13"       # Stack-allocated vectors

# Concurrent/allocation helpers
dashmap = "6.1"         # Concurrent HashMap
bumpalo = "3.16"        # Arena allocator

# Experimental/supporting implementation helpers
# Wizer for pre-initialization; startup proof not measured
# Note: Applied at build time, not runtime dependency

# Similarity and pattern-matching helpers
simsimd = { version = "6.2", optional = true }         # Optional similarity metrics backend
branches = "0.3"        # Branch prediction hints
aho-corasick = "1.1"    # Multi-pattern matching O(N+M)
daachorse = "1.0"       # Double-array AC automaton

# Optional GPU compute support
wgpu = { version = "23.0", optional = true }                    # WebGPU compute support
pollster = { version = "0.4", optional = true }                 # Async runtime for GPU
futures-intrusive = { version = "0.5", optional = true }        # Async channels

[dev-dependencies]
criterion = "0.5"
